--- a/sorter.html
+++ b/sorter.html
@@ -330,140 +330,154 @@
       <table class="booksTable">
         <tr class="booksRow">
           <th class="Science" onclick="window.location.href='QS.html';">
-            <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  Quantum Supremacy
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Michio Kaku
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    Quantum Supremacy
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Michio Kaku
+                </span>
+                <br>
+                <span class="cost">
+                  $15.99
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $15.99
-              </span>
-            </span>
+            </div>
           </th>
           <th class="Science" onclick="window.location.href='OOT.html';">
-            <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  <a>
-                    On The Origin of Time
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
-              <span class="auther">
-                By: Stephen Hawking
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      On The Origin of Time
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Stephen Hawking
+                </span>
+                <br>
+                <span class="cost">
+                  $15.99
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $15.99
-              </span>
-            </span>
+            </div>
           </th>
           <th class="Science" onclick="window.location.href='O.html';">
-            <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  <a>
-                    Origins
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
-              <span class="auther">
-                By: Neil DeGrasse Tyson
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Origins
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Neil DeGrasse Tyson
+                </span>
+                <br>
+                <span class="cost">
+                  $10.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $10.00
-              </span>
-            </span>
+            </div>
           </th>
         </tr>
         <tr class="booksRow">
           <th class="Science" onclick="window.location.href='APH.html';">
-            <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  <a>
-                    Astrophysics for people in a hurry
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
-              <span class="auther">
-                By: Neil DeGrasse Tyson
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Astrophysics for people in a hurry
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Neil DeGrasse Tyson
+                </span>
+                <br>
+                <span class="cost">
+                  $15.99
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $15.99
-              </span>
-            </span>
+            </div>
           </th>
           <th class="Science" onclick="window.location.href='AGL.html';">
-            <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  <a>
-                    An Astronaut's Guide to Life
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
-              <span class="auther">
-                By: Chris Hadfield
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      An Astronaut's Guide to Life
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Chris Hadfield
+                </span>
+                <br>
+                <span class="cost">
+                  $10.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $10.00
-              </span>
-            </span>
+            </div>
+            
           </th>
           <th class="Science" onclick="window.location.href='TGD.html';">
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
-              <b>
-                50% off
-              </b>
-            </span>
-            <br>
-            <br>
-            <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
+            <div class="card">
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
                 <b>
-                  <a>
-                    The Grand Design
-                  </a>
+                  50% off
                 </b>
               </span>
               <br>
-              <span class="auther">
-                By: Stephen Hawking
-              </span>
               <br>
-              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                $18.00 
+              <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      The Grand Design
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Stephen Hawking
+                </span>
+                <br>
+                <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                  $18.00 
+                </span>
+                <span style="font-size:20px">
+                  $9.00
+                </span>
               </span>
-              <span style="font-size:20px">
-                 $9.00
-              </span>
-            </span>
+            </div>
+            
           </th>
         </tr>
         <tr class="booksRow">
