--- a/BABQ.html
+++ b/BABQ.html
@@ -80,87 +80,87 @@
             <input type="text" id="Search" onkeyup="search()" placeholder="Search...">
             <ul id="searchMenu">
               <li>
-                <a href="productPage.html">
+                <a href="QS.html" class="searchItems">
                   Quantum Supremacy
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="OOT.html" class="searchItems">
                   On The Origin Of Time
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="O.html" class="searchItems">
                   Origins
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="APH.html" class="searchItems">
                   Astrophysics for people in a hurry
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="AGL.html" class="searchItems">
                   An astronaut's guide to life
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="TGD.html" class="searchItems">
                   The Grand Design
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="LFA.html" class="searchItems">
                   Letters from an Astrophysicist
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="BABQ.html" class="searchItems">
                   Brief Answers, Big Questions, Collection
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="TCL.html" class="searchItems">
                   The C Programming Language
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="TBP.html" class="searchItems">
                   The Three Body Problem Trilogy
                 </a>
               </li>
               <li>
-                <a href="productPage.htm;">
+                <a href="SE.htm;">
                   Supernova Era
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="BL.html" class="searchItems">
                   Ball Lightning
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="HUTS.html" class="searchItems">
                   To Hold Up The Sky
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="TWE.html" class="searchItems">
                   The Wandering Earth
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="ROT.html" class="searchItems">
                   The Redemtion Of Time
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="BHS.html" class="searchItems">
                   Bowl Of Heaven & Shipstar
                 </a>
               </li>
               <li>
-                <a href="productPage.html">
+                <a href="G.html" class="searchItems">
                   Glourious
                 </a>
               </li>
@@ -203,7 +203,7 @@
                     </tr>
                 </table>
             </div>
-            <fieldset style="float:right;padding-right:100px;">
+            <fieldset class="desc">
               <div>
                 <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding-right:10px;padding-left:10px;">
                     <b>
