--- a/sorter.html
+++ b/sorter.html
@@ -348,10 +348,10 @@
                   $15.99
                 </span>
               </span>
+              <button onclick="localStorage.setItem('Quantum Supremacy', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
             </div>
-            <button onclick="localStorage.setItem('Quantum Supremacy', 1);alert('Added to your cart');">
-              Add to Cart
-            </button>
           </th>
           <th class="Science" onclick="window.location.href='OOT.html';">
             <div class="card">
@@ -374,10 +374,10 @@
                   $15.99
                 </span>
               </span>
+              <button onclick="localStorage.setItem('On The Origin of Time', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
             </div>
-            <button onclick="localStorage.setItem('On The Origin of Time', 1);alert('Added to your cart');">
-              Add to Cart
-            </button>
           </th>
           <th class="Science" onclick="window.location.href='O.html';">
             <div class="card">
@@ -400,10 +400,10 @@
                   $10.00
                 </span>
               </span>
+              <button onclick="localStorage.setItem('Origins', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
             </div>
-            <button onclick="localStorage.setItem('Origins', 1);alert('Added to your cart');">
-              Add to Cart
-            </button>
           </th>
         </tr>
         <tr class="booksRow">
@@ -428,10 +428,10 @@
                   $15.99
                 </span>
               </span>
+              <button onclick="localStorage.setItem('Astrophysics for people in a hurry', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
             </div>
-            <button onclick="localStorage.setItem('Astrophysics for people in a hurry', 1);alert('Added to your cart');">
-              Add to Cart
-            </button>
           </th>
           <th class="Science" onclick="window.location.href='AGL.html';">
             <div class="card">
@@ -454,10 +454,10 @@
                   $10.00
                 </span>
               </span>
+              <button onclick="localStorage.setItem('An Astronauts Guide to Life', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
             </div>
-            <button onclick="localStorage.setItem('An Astronauts Guide to Life', 1);alert('Added to your cart');">
-              Add to Cart
-            </button>
           </th>
           <th class="Science" onclick="window.location.href='TGD.html';">
             <div class="card">
@@ -522,243 +522,293 @@
                 Add to Cart
               </button>
             </div>
-            
           </th>
           <th class="Science" onclick="window.location.href='BABQ.html';">
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
-              <b>
-                25% off
-              </b>
-            </span>
-            <br>
-            <br>
-            <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
+            <div class="card">
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
                 <b>
-                  <a>
-                    Breif Answers, Big Questions
-                  </a>
+                  25% off
                 </b>
               </span>
               <br>
-              <span class="auther">
-                By: Stephen Hawking
-              </span>
               <br>
-              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                $60.00 
+              <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
+              <br>
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      Breif Answers, Big Questions
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Stephen Hawking
+                </span>
+                <br>
+                <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                  $60.00 
+                </span>
+                <span style="font-size:20px">
+                  $45.00
+                </span>
               </span>
-              <span style="font-size:20px">
-                 $45.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('Breif Answers, Big Questions', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="Computer-Science" onclick="window.location.href='TCL.html';">
-            <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
-            <br>
-            <span>
-              <span class="title">
-                <b>
-                  <a>
-                    The C Programming Language
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
-              <span class="auther">
-                By: Brian W. Kernighan & Dennis M. Ritchie
+              <span>
+                <span class="title">
+                  <b>
+                    <a>
+                      The C Programming Language
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Brian W. Kernighan & Dennis M. Ritchie
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('The C Programming Language', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
         </tr>
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='TBP.html';">
-            <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    The Three Body Problem Trilogy
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Cixin Liu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      The Three Body Problem Trilogy
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Cixin Liu
+                </span>
+                <br>
+                <span class="cost">
+                  $60.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $60.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('The Three Body Problem Trilogy', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="Space" onclick="window.location.href='SE.html';">
-            <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    Supernove Era
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Cixin Liu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      Supernove Era
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Cixin Liu
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('Supernova Era', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="Space" onclick="window.location.href='BL.html';">
-            <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    Ball Lightning
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Cixin Liu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      Ball Lightning
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Cixin Liu
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('Ball Lightning', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
         </tr>
         <tr class="booksRow">
           <th class="ShortStories" onclick="window.location.href='HUTS.html';">
-            <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    To Hold Up The Sky
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Cixin Liu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      To Hold Up The Sky
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Cixin Liu
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('To Hold Up The Sky', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="ShortStories" onclick="window.location.href='TWE.html';">
-            <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    The Wandering Earth
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Cixin Liu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      The Wandering Earth
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Cixin Liu
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('The Wandering Earth', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="Space" onclick="window.location.href='ROT.html';">
-            <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    The Redemtion of Time
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Baoshu
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      The Redemtion of Time
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Baoshu
+                </span>
+                <br>
+                <span class="cost">
+                  $20.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $20.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('The Redemtion of Time', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
         </tr>
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='BHS.html';">
-            <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
-              <b>
-                50% off
-              </b>
-            </span>
-            <br>
-            <br>
-            <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
+            <div class="card">
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
                 <b>
-                  <a>
-                    Bowl of Heaven & Shipstar
-                  </a>
+                  50% off
                 </b>
               </span>
               <br>
-              <span class="auther">
-                By: Gregory Benford & Larry Niven
-              </span>
               <br>
-              <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
-                $30.00
+              <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
+              <br>
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      Bowl of Heaven & Shipstar
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Gregory Benford & Larry Niven
+                </span>
+                <br>
+                <span style="color:rgb(86, 89, 89);text-decoration:line-through;font-size:20px;">
+                  $30.00
+                </span>
+                <span style="font-size:20px">
+                    $15.00
+                </span>
               </span>
-              <span style="font-size:20px">
-                  $15.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('Bowl of Heaven & Shipstar', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
           </th>
           <th class="Space" onclick="window.location.href='G.html';">
-            <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
-            <br>
-            <span>
-              <span class="title" style="font-size: larger;">
-                <b>
-                  <a>
-                    Glorious
-                  </a>
-                </b>
-              </span>
+            <div class="card">
+              <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
-              <span class="auther">
-                By: Gregory Benford & Larry Niven
+              <span>
+                <span class="title" style="font-size: larger;">
+                  <b>
+                    <a>
+                      Glorious
+                    </a>
+                  </b>
+                </span>
+                <br>
+                <span class="auther">
+                  By: Gregory Benford & Larry Niven
+                </span>
+                <br>
+                <span class="cost">
+                  $15.00
+                </span>
               </span>
-              <br>
-              <span class="cost">
-                $15.00
-              </span>
-            </span>
+              <button onclick="localStorage.setItem('Gloriour', 1);alert('Added to your cart');">
+                Add to Cart
+              </button>
+            </div>
+            
           </th>
         </tr>
       </table>
