--- a/sorter.html
+++ b/sorter.html
@@ -749,7 +749,7 @@
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='BHS.html';">
             <div class="card">
-              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
+              <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 5% 5px 5%;text-align:center;">
                 <b>
                   50% off
                 </b>
