--- a/HUTS.html
+++ b/HUTS.html
@@ -180,26 +180,26 @@
         </nav>
         <hr>
         <br>
-            <div class="pictures" onclick="Increase()">
-                <table>
-                    <tr>
-                        <th>
-                            <img src="resources/book13(1).jpg" id="pict1" width="auto" height="700px">
-                        </th>
-                    </tr>
-                    <tr>
-                        <th>
-                            <img src="resources/book13(2).jpg" id="pict2" width="100px" height="100px">
-                        </th>
-                        <th>
-                            <img src="resources/book13(3).jpg" id="pict3" width="100px" height="100px">
-                        </th>
-                        <th>
-                            <img src="resources/book13(4).jpg" id="pict4" width="100px" height="100px">
-                        </th>
-                    </tr>
-                </table>
-            </div>
+        <div class="row">
+          <div class="column">
+            <img src="resources/book13(1).jpg" style="width:auto;height:70%;" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book13(2).jpg" style="width:auto;height:70%;" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book13(3).jpg" style="width:auto;height:70%;" onclick="inlarge(this);">
+          </div>
+          <div class="column">
+            <img src="resources/book13(4).jpg" style="width:auto;height:70%;" onclick="inlarge(this);">
+          </div>
+        </div>
+        
+        <div class="container">
+          <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+          <img id="expandedImg" style="width:auto;height:70%;">
+          <div id="imgtext"></div>
+        </div>
             <fieldset class="desc">
               <div>
                 <h2 id="bookTitle">
