--- a/sorter.html
+++ b/sorter.html
@@ -203,8 +203,8 @@
             Fiction
           </label>
           <br>
-          <input type="checkbox" id="DealChecker" value="Deals" class="in">
-          <label for="DealChecker">
+          <input type="checkbox" id="Deals" value="Deals" class="in">
+          <label for="Deals">
             Deals
           </label>
           <br>
