--- a/sorter.html
+++ b/sorter.html
@@ -333,6 +333,11 @@
             <div class="card">
               <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <br>
+              <br>
               <span>
                 <span class="title" style="font-size: larger;">
                   <b>
