--- a/sorter.html
+++ b/sorter.html
@@ -37,6 +37,9 @@
           <option value="Computer-Science">
             Computer Science
           </option>
+          <option value="Uncertainty">
+            Uncertainty
+          </option>
           <option value="Space">
             Space
           </option>
@@ -331,12 +334,15 @@
         <tr class="booksRow">
           <th class="Science" onclick="window.location.href='QS.html';">
             <div class="card">
-              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
-              <br>
               <span class="genre">
                 Non-Fiction
               </span>
+              <span class="topic">
+                Science
+              </span>
               <br>
+              <br>
+              <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
                 <span class="title" style="font-size: larger;">
@@ -360,6 +366,14 @@
           </th>
           <th class="Science" onclick="window.location.href='OOT.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -386,6 +400,14 @@
           </th>
           <th class="Science" onclick="window.location.href='O.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -414,6 +436,14 @@
         <tr class="booksRow">
           <th class="Science" onclick="window.location.href='APH.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -440,6 +470,14 @@
           </th>
           <th class="Science" onclick="window.location.href='AGL.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -466,6 +504,13 @@
           </th>
           <th class="Science" onclick="window.location.href='TGD.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
               <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
                 <b>
                   50% off
@@ -504,6 +549,14 @@
         <tr class="booksRow">
           <th class="Science" onclick="window.location.href='LFA.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -530,6 +583,13 @@
           </th>
           <th class="Science" onclick="window.location.href='BABQ.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Science
+              </span>
+              <br>
               <span style="background-color:red;color:white;font-size:15px;border-radius:10px;padding:5px 100px 5px 100px;text-align:center;">
                 <b>
                   25% off
@@ -566,6 +626,14 @@
           </th>
           <th class="Computer-Science" onclick="window.location.href='TCL.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Computer Science
+              </span>
+              <br>
+              <br>
               <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
               <br>
               <span>
@@ -594,6 +662,14 @@
         <tr class="booksRow">
           <th class="Space" onclick="window.location.href='TBP.html';">
             <div class="card">
+              <span class="genre">
+                Non-Fiction
+              </span>
+              <span class="topic">
+                Uncertainty
+              </span>
+              <br>
+              <br>
               <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
               <br>
               <span>
