--- a/SE.html
+++ b/SE.html
@@ -34,6 +34,9 @@
                 <option value="Computer-Science">
                   Computer Science
                 </option>
+                <option value="Uncertainty">
+                  Uncertainty
+                </option>
                 <option value="Space">
                   Space
                 </option>
