--- a/contacts.html
+++ b/contacts.html
@@ -35,6 +35,9 @@
                 <option value="Computer-Science">
                   Computer Science
                 </option>
+                <option value="Uncertainty">
+                  Uncertainty
+                </option>
                 <option value="Space">
                   Space
                 </option>
